tests/snapshots/sfc/js/patches__imported_custom_directive_binding_in_script_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
import { vElementHover } from "@vueuse/components";
export default {
  __name: "test",
  setup(__props) {
    return (_ctx, _cache) => {
      const _directive_element_hover = vElementHover;
      return _withDirectives((_openBlock(), _createElementBlock(
        "div",
        null,
        null,
        512
        /* NEED_PATCH */
      )), [[_directive_element_hover, () => {}]]);
    };
  }
};
