tests/snapshots/sfc/js/patches__keep_alive_inside_v_for_should_use_builtin.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 221
expression: js_output.as_str()
---
import { resolveDynamicComponent as _resolveDynamicComponent, openBlock as _openBlock, createBlock as _createBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList, KeepAlive as _KeepAlive } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const tabs = ref([{ id: 1, component: 'TabA' }])

return (_ctx, _cache) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(tabs.value, (tab) => {
    return (_openBlock(), _createBlock(_KeepAlive, { key: tab.id }, [
      (_openBlock(), _createBlock(_resolveDynamicComponent(tab.component)))
    ], 1024 /* DYNAMIC_SLOTS */))
  }), 128 /* KEYED_FRAGMENT */))
}
}

}
