tests/snapshots/sfc/js/patches__nullable_runtime_prop_types_keep_null.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 221
expression: js_output.as_str()
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
export default {
  __name: "test",
  props: {
    activeKey: {
      type: [String, null],
      required: true
    },
    items: {
      type: [Array, null],
      required: true
    },
    groupName: {
      type: [String, null],
      required: true
    }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div");
    };
  }
};
