tests/snapshots/sfc/js/patches__script_with_setup_function.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

import { ref } from 'vue'

const _sfc_main = {
  name: 'SetupFunctionComponent',
  setup() {
    const count = ref(0)
    return { count }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.count), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
