tests/snapshots/sfc/js/patches__setuplet_assignment_in_click_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref, isRef as _isRef } from "vue"


export default {
  __name: 'test',
  setup(__props) {

let count = $ref(0)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", {
    onClick: _cache[0] || (_cache[0] = $event => ((_isRef(count) ? count.value = _unref(count) + 1 : count = _unref(count) + 1)))
  }, _toDisplayString(_unref(count)), 1 /* TEXT */))
}
}

}
